# the_pico_retro_tape

./: README.md
.github/workflows/: ci.yml
doc/: projekt_planung.odt  the_retro_tape_documentation.odt  todo.txt
docs/: image_convertion.txt  logo_fw.data  logo_fw.xcf  projekt_planung_recherche.odt  the_retro_tape_documentation.odt  todo.txt
docs/c64/: T64.TXT
docs/logo_ai/: logo_trans_background.xcf
firmware/: .gitignore  CMakeLists.txt  c1530.c  c1530.cpp  c1530.h  file_browser.cpp  file_browser.h  goonies.h  logo_fw.h  the_pico_retro_tape.c  the_pico_retro_tape.cpp  verison.h
firmware/.github/workflows/: ci.yml
firmware/pico_st7735/: CMakeLists.txt  README.md
firmware/pico_st7735/include/st7735/: ST7735_TFT.hpp  ST7735_TFT_graphics.hpp
firmware/pico_st7735/src/st7735/: ST7735_TFT.cpp  ST7735_TFT_graphics.cpp
firmware/tap_images/: aargh_tap.h  ggs.h  hoh.h
hardware/: the_pico_retro_tape.kicad_prl  the_pico_retro_tape.kicad_pro  the_pico_retro_tape.kicad_sch
hardware/ltspice_simulations/: c64_tap_pulse_to_audio.asc  c64_tap_pulse_to_audio.op.raw  c64_tap_pulse_to_audio.raw  simulation_sense_signal_control.asc  simulation_sense_signal_control.net  simulation_sense_signal_control.op.raw  simulation_sense_signal_control.raw
